ci-frontend/ci/k8s/sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.ap.svc: $CI_PROJECT_NAME
  name: $CI_PROJECT_NAME
  namespace: $K8S_NAMESPACE
spec:
  type: ClusterIP
  ports:
  - name: "http"
    appProtocol: "http"
    port:
    targetPort:
  selector:
    app.ap.deploy: $CI_PROJECT_NAME
